version/stable/_sources/api/ansys/mechanical/stubs/v242/Ansys/ACT/Automation/Mechanical/FE/NASTRAN/CaseControlCommand.rst.txt
.. vale off



:class:`CaseControlCommand`
===========================

.. py:class:: ansys.mechanical.stubs.v242.Ansys.ACT.Automation.Mechanical.FE.NASTRAN.CaseControlCommand(iCaseControlCommand: Ansys.Common.Interop.FEParsePlugin_NASTRAN.ICaseControlCommand)

   Bases: :py:obj:`object`


   
   Case control command.
















   ..
       !! processed by numpydoc !!


.. py:currentmodule:: CaseControlCommand

Overview
--------

.. tab-set::




   .. tab-item:: Properties

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~Index`
            - Gets the command index.
          * - :py:attr:`~Name`
            - Gets the command name.
          * - :py:attr:`~Text`
            - Gets the text.







Property detail
---------------
.. py:property:: Index
   :type: Optional[int]


   
   Gets the command index.
















   ..
       !! processed by numpydoc !!

.. py:property:: Name
   :type: Optional[str]


   
   Gets the command name.
















   ..
       !! processed by numpydoc !!

.. py:property:: Text
   :type: Optional[str]


   
   Gets the text.
















   ..
       !! processed by numpydoc !!







.. vale on